<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/claim_prize"
        android:textColor="#8dc73f"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_srch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_lottery_type"
        android:textColor="#8dc73f"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/btn_5"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:onClick="BtnLotteryClicked"
            android:text="@string/lottery_5"
            android:textColor="#00a769"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:onClick="BtnLotteryClicked"
            android:text="@string/lottery_6"
            android:textColor="#eb0f42"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:onClick="BtnLotteryClicked"
            android:text="@string/lottery_7"
            android:textColor="#816800"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_ticket"
            android:layout_width="match_parent"
            android:layout_height="25pt"
            android:onClick="BtnTicketClicked"
            android:text="@string/scratch_card"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_srch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="42dp"
        android:onClick="BtnGetPrizeClicked"
        android:text="@string/reference_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="203dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/leaf" />

</androidx.constraintlayout.widget.ConstraintLayout>