<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#95D12A"
    tools:context=".NumberPickActivity">

    <EditText
        android:id="@+id/editText_numbers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/numbers"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersHeadTv" />

    <TextView
        android:id="@+id/lottery_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lottery_type"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numbersHeadTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/winning_numbers"
        android:textColor="#8dc73f"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottery_name_tv" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="193dp"
        android:layout_marginTop="10dp"
        android:contentDescription="phone shake image"
        android:src="@drawable/shakephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMsgTv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginBottom="24dp"
        android:gravity="center|center_vertical"
        android:text="@string/random_numbers"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/send_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="182dp"
        android:layout_height="25pt"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#95D12A"
        android:onClick="sendButtonPushed"
        android:text="@string/send"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/modify_btn"
        android:layout_width="wrap_content"
        android:layout_height="25pt"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:onClick="modifyButtonPushed"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_btn" />

    <TextView
        android:id="@+id/errorMsgTv"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#D33535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_numbers" />

</androidx.constraintlayout.widget.ConstraintLayout>